forked unmainted repo--code cleanup

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,11 @@
+.ghc.environment.*
+.stack-work/
+bin
+cabal.project.loca*
+deploy
 dist
-cabal-dev
+dist-newstyle
+*.a
 *.o
 *.hi
-*.chi
-*.chs.h
-*.dyn_o
-*.dyn_hi
-.virtualenv
-.hpc
-.hsenv
-.cabal-sandbox/
-cabal.sandbox.config
-*.prof
-*.aux
-*.hp
+*~
