--- a/mrm.cabal
+++ b/mrm.cabal
@@ -1,6 +1,6 @@
-name:                mrm
-version:             0.1.0.0
-synopsis:            Modular Refiable Matching, first-class matches
+name:                 mrm
+version:              0.1.0.0
+synopsis:             Modular Refiable Matching, first-class matches
 description:
     This package contains an implementation of
     Modular Reifiable Matching (MRM), a new approach to two level
@@ -14,31 +14,51 @@ description:
 
     For more information, please refer to
     <http://www.iis.sinica.edu.tw/~scm/2015/mrm/>.
-homepage:            https://github.com/scmu/mrm
-license:             BSD3
-license-file:        LICENSE
-author:              brunosoliveira, scmu, suhorng
-maintainer:          suhorng AT gmail DOT com
-copyright:           Copyright (c) 2016, brunosoliveira, scmu, suhorng
-category:            Data
-build-type:          Simple
-extra-source-files:  README.md
-cabal-version:       >=1.10
+homepage:             https://github.com/scmu/mrm
+license:              BSD3
+license-file:         LICENSE
+author:               brunosoliveira, scmu, suhorng
+maintainer:           suhorng AT gmail DOT com
+copyright:            Copyright (c) 2016, brunosoliveira, scmu, suhorng
+category:             Data
+build-type:           Simple
+extra-source-files:   README.md
+cabal-version:        >=1.10
 
 source-repository head
-  type:                 git
-  location:             https://github.com/scmu/mrm
+  type:               git
+  location:           https://github.com/scmu/mrm
 
 library
-  hs-source-dirs:      src
-  build-depends:       base >=4.7 && <4.8
-  other-extensions:    GADTs
-  exposed-modules:     Data.Match,
-                       Data.ConstrainedList,
-                       Data.Match.Subset,
-                       Data.Match.Query,
-                       Data.Match.Monadic,
-                       Data.Match.Membership,
-                       Data.Match.Fix,
-                       Data.Match.Effects
-  default-language:    Haskell2010
+  hs-source-dirs:     src
+  build-depends:      base >=4.7 && <5.0
+  exposed-modules:    Data.ConstrainedList
+                    , Data.Match
+                    , Data.Match.Effects
+                    , Data.Match.Fix
+                    , Data.Match.Membership
+                    , Data.Match.Monadic
+                    , Data.Match.Query
+                    , Data.Match.Subset
+
+  default-language:   Haskell2010
+  default-extensions: BangPatterns
+                    , BlockArguments
+                    , DataKinds
+                    , DeriveFunctor
+                    , DeriveGeneric
+                    , DerivingStrategies
+                    , DuplicateRecordFields
+                    , FlexibleContexts
+                    , FlexibleInstances
+                    , GADTs
+                    , KindSignatures
+                    , LambdaCase
+                    , MultiParamTypeClasses
+                    , PolyKinds
+                    , OverloadedStrings
+                    , RankNTypes
+                    , ScopedTypeVariables
+                    , TemplateHaskell
+                    , TypeApplications
+                    , TypeOperators
